--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>A BLOG
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
+
 <body>
   <div class="this-is-a-css-class"> 
-    <h1> Kia ora! This is your first blog page!</h1> 
-    <h2> I will use this page to store my technical blogs and Reflection blogs </h2>
+    <h1> TE TĪ O HINEIRA</h1> 
+    <h2> Anei ōku whakaaro me ngā hiahia o tōku ao </h2>
+    <p>Ko <strong>Hineira Tipene-Komene</strong> tōku ingoa</p>
+    <p> He mea mo ngā <em>korero</em> </p>
+    <button> click here </button>
+    
   </div>
-  <p> I will also be able to use this blog space as a way to show my creativity and build my own blog.
-    Chuurrr!
-  </p>
+ 
+ 
 
 </body>
 </html>
